; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_si.c_SI_Sync.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_si.c_SI_Sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_siReg = common dso_local global i32* null, align 8
@SICOMCSR_TSTART = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SI_Sync() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  br label %3

3:                                                ; preds = %10, %0
  %4 = load i32*, i32** @_siReg, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 13
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @SICOMCSR_TSTART, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %3
  br label %3

11:                                               ; preds = %3
  %12 = load i32, i32* %1, align 4
  %13 = call i32 @_CPU_ISR_Disable(i32 %12)
  %14 = call i32 (...) @__si_completetransfer()
  store i32 %14, i32* %2, align 4
  %15 = call i32 @__si_transfernext(i32 4)
  %16 = load i32, i32* %1, align 4
  %17 = call i32 @_CPU_ISR_Restore(i32 %16)
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @__si_completetransfer(...) #1

declare dso_local i32 @__si_transfernext(i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
